SERVER-61473 Make ReshardingMetrics::onCompletion() idempotent.

ReshardingMetrics::onCompletion() can be called multiple times within
the resharding::WithAutomaticRetry blocks of the ReshardingCoordinator.